add AddPositionDialog component

--- a/src/app/bar-table/bar-table.component.html
+++ b/src/app/bar-table/bar-table.component.html
@@ -1,4 +1,6 @@
-<button mat-raised-button class="add-position-button" (click)="addPosition()"> Добавить позицию </button>
+<div class="add-position-button">
+ <button mat-raised-button (click)="addPosition()"> Добавить позицию </button>
+</div>
 
 <table mat-table [dataSource]="dataSource" class="bar-table">
 
