--- a/src/app/bar-table/bar-table.component.scss
+++ b/src/app/bar-table/bar-table.component.scss
@@ -1,12 +1,15 @@
 .add-position-button {
-  margin: 50px 0px 0px;
-  text-align: right;
+  margin: 30px 30px 0px;
+  text-align: left;
 }
 
 table {
   width: 100%;
   margin: 50px 0px 0px;
 
+  td.mat-column-position {
+    width: 7%;
+  }
 
   td.mat-column-edit {
     width: 4%;
