fix numeric validator && disabled 'ok' button if fields is empty

--- a/src/app/DialogWindows/delete-position-dialog/delete-position-dialog.component.html
+++ b/src/app/DialogWindows/delete-position-dialog/delete-position-dialog.component.html
@@ -4,5 +4,5 @@
     <p>Вы действительно хотите удалить позицию?</p>
   </div>
   <button mat-raised-button [mat-dialog-close]="false">Отмена</button>
-  <button mat-raised-button [mat-dialog-close]="true" cdkFocusInitial>Удалить</button>
+  <button mat-raised-button [mat-dialog-close]="true">Удалить</button>
 </div>
