work add position, increase dialog windows

--- a/src/app/DialogWindows/add-position-dialog/add-position-dialog.component.html
+++ b/src/app/DialogWindows/add-position-dialog/add-position-dialog.component.html
@@ -67,6 +67,6 @@
 
   <div class="buttons">
   <button mat-raised-button [mat-dialog-close]="false">Закрыть</button>
-  <button mat-raised-button [disabled]="formCreate.invalid" [mat-dialog-close]="true">Добавить</button>
+  <button mat-raised-button [disabled]="formCreate.invalid" [mat-dialog-close]="formCreate.value">Добавить</button>
   </div>
 </div>
