--- a/src/app/DialogWindows/decrease-position-dialog/decrease-position-dialog.component.html
+++ b/src/app/DialogWindows/decrease-position-dialog/decrease-position-dialog.component.html
@@ -25,7 +25,7 @@
 
   <div class="buttons">
     <button mat-raised-button [mat-dialog-close]="false">Закрыть</button>
-    <button mat-raised-button [disabled]="formCreate.invalid" [mat-dialog-close]="true">Принять</button>
+    <button mat-raised-button [disabled]="formCreate.invalid" [mat-dialog-close]="formCreate.value">Принять</button>
   </div>
 </div>
 
